updated nav links syling implemented, fixed radius cutting off text in textarea on contact page

--- a/Styles/contact.css
+++ b/Styles/contact.css
@@ -15,14 +15,29 @@ body {
     padding: 0; /* Remove default body padding */
 }
 
-
 .article-parent .article-child textarea {
-    width: 300px;
-    height: 150px;
+    padding: 0;
+    min-height: 300px;
+    min-width: 300px;
+    resize: none;
+    border-radius: 5px;
+    background-color: var(--secondary-color);
+    border: none;
+    outline-width: 0;
+  
 }
 
+
 .article-parent .article-child input {
-    width: 300px;
+    padding: 0;
+    min-width: 100%;
+    min-height: 100%;
+    background-color: var(--secondary-color);
+    border: none;
+    outline-width: 0;
+
+
+
   
 }
 
@@ -68,13 +83,6 @@ body {
 
 .Submit-btm-child a {
     text-align: center;
-    color: white; /* Text color */
-    text-shadow: 
-        -1px -1px 0 #000,  
-         1px -1px 0 #000,
-        -1px  1px 0 #000,
-         1px  1px 0 #000; /* Creates a black border effect */
-    font-size: 16px; /* Adjusts the font size */
-    text-decoration: none;
+    color: #0f191a
 
 }
